--- a/nginx-reverse-proxy/conf/conf.d/reverse-proxy.conf
+++ b/nginx-reverse-proxy/conf/conf.d/reverse-proxy.conf
@@ -5,37 +5,43 @@ upstream reverse_proxy_backend {
 # server {
 #     server_name ${WEB_DOMAIN};
 #     listen 80;
-#     return 302 https://$server_name$request_uri;
+
+#     location ~ /.well-known {
+#         root /var/www/${WEB_DOMAIN};
+#         allow all;
+#     }
+
+#     location / {
+#         return 302 https://$server_name$request_uri;
+#     }
 # }
 
 server {
     server_name ${WEB_DOMAIN};
-	
-    # listen 443 ssl http2;
-	listen 80;
+    listen 80; # 443 ssl http2;
     
-    # ssl_certificate /etc/letsencrypt/live/${WEB_DOMAIN}/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/${WEB_DOMAIN}/privkey.pem;
+#     ssl_certificate ${SSL_CERTIFICATE};
+#     ssl_certificate_key ${SSL_CERTIFICATE_KEY};
     
     access_log /var/log/nginx/access_reverse_proxy.log main;
     error_log /var/log/nginx/error_reverse_proxy.log warn;
 	
-	location ~ /.well-known {
-	    root /var/www/${WEB_DOMAIN};
-	    allow all;
-	}
+    location ~ /.well-known {
+        root /var/www/${WEB_DOMAIN};
+        allow all;
+    }
 	
     location / {
-		proxy_pass ${APP_PROTOCOL}://reverse_proxy_backend;
+        proxy_pass ${APP_PROTOCOL}://reverse_proxy_backend;
 
-		proxy_http_version 1.1;
+        proxy_http_version 1.1;
         
-		proxy_read_timeout 300;
-		proxy_connect_timeout 300;
-		proxy_redirect off;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_redirect off;
 
-		proxy_set_header Host $http_host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
