--- a/nginx-reverse-proxy/Dockerfile
+++ b/nginx-reverse-proxy/Dockerfile
@@ -12,6 +12,8 @@ ENV HTTPS_CERT_PRIVATE_PATH ""
 ENV HTTPS_LETSENCRYPT_EMAIL ""
 ENV HTTPS_DHPARAM_LEN 4096
 
+ENV SUPPORTS_WWW_SUBDOMAIN False
+
 VOLUME /etc/letsencrypt
 
 COPY conf/ /etc/nginx/
