--- a/nginx-reverse-proxy/conf/conf.d/reverse-proxy.conf
+++ b/nginx-reverse-proxy/conf/conf.d/reverse-proxy.conf
@@ -3,7 +3,7 @@ upstream reverse_proxy_backend {
 }
 
 # server {
-#     server_name ${WEB_DOMAIN};
+#     server_name ${WEB_DOMAINS};
 #     listen 80;
 
 #     location ~ /.well-known {
@@ -17,7 +17,7 @@ upstream reverse_proxy_backend {
 # }
 
 server {
-    server_name ${WEB_DOMAIN};
+    server_name ${WEB_DOMAINS};
     listen 80; # 443 ssl http2;
     
 #     ssl_certificate ${SSL_CERTIFICATE};
