--- a/sphinxsearch3/sphinx.conf
+++ b/sphinxsearch3/sphinx.conf
@@ -1,15 +1,8 @@
 source src
 {
-    type                = mysql
-    sql_host            = 127.0.0.1
-    sql_user            = root
-    sql_pass            = 
-    sql_db              = test
-    sql_port            = 3306
-
-    sql_query        	= select * from test
-    sql_field_string 	= content
-    sql_attr_uint		 = g_id
+	type 				= tsvpipe
+	tsvpipe_command 	= cat /var/sphinx-sample.tsv
+	tsvpipe_field 		= name
 }
 
 index test
